--- a/Eloi/gdansk_eloi.html
+++ b/Eloi/gdansk_eloi.html
@@ -12,13 +12,13 @@
     <title>Lodz Erasmus</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-stand-blog.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/templatemo-stand-blog.css">
+    <link rel="stylesheet" href="../assets/css/owl.css">
 <!--
 
 TemplateMo 551 Stand Blog
@@ -44,26 +44,26 @@ https://templatemo.com/tm-551-stand-blog
     <header class="">
         <nav class="navbar navbar-expand-lg">
           <div class="container">
-            <a class="navbar-brand" href="index.html"><h2>Lodz Erasmus<em>.</em></h2></a>
+            <a class="navbar-brand" href="../index.html"><h2>Lodz Erasmus<em>.</em></h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home
+                  <a class="nav-link" href="../index.html">Home
                     <span class="sr-only">(current)</span>
                   </a>
                 </li>  
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">ABOUT</a>
+                  <a class="nav-link" href="../about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="blog.html">BLOG</a>
+                  <a class="nav-link" href="../blog.html">BLOG</a>
                 </li>
                 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">CONTACT US</a>
+                  <a class="nav-link" href="../contact.html">CONTACT US</a>
                 </li>
               </ul>
             </div>
@@ -161,15 +161,15 @@ https://templatemo.com/tm-551-stand-blog
                         </div>
                         <div class="content">
                             <ul>
-                                <li><a href="RomainM-1-post-details.html">
+                                <li><a href="../RomainM-1-post-details.html">
                                     <h5>[Titre recent Post #1]</h5>
                                     <span>[Date correspondante]</span>
                                 </a></li>
-                                <li><a href="post-details.html">
+                                <li><a href="../post-details.html">
                                     <h5>[Titre recent Post #2]</h5>
                                     <span>[Date correspondante]</span>
                                 </a></li>
-                                <li><a href="post-details.html">
+                                <li><a href="../post-details.html">
                                     <h5>[Titre recent Post #3]</h5>
                                     <span>[Date correspondante]</span>
                                 </a></li>
@@ -185,13 +185,13 @@ https://templatemo.com/tm-551-stand-blog
                     </div>
                     <div class="content">
                       <ul>
-                        <li><a href="blogRomainM.html">Romain M </a></li>
+                        <li><a href="../blogRomainM.html">Romain M </a></li>
                         <li><a href="blogEloiA.html">Eloi</a></li>
-                        <li><a href="blogRomainJ.html">Romain J</a></li>
-                        <li><a href="clement/blogClementC.html">Clément</a></li>
-                        <li><a href="blogTitouanR.html">Titouan</a></li>
-                        <li><a href="blogDamienL.html">Damien</a></li>
-                        <li><a href="blogBastien.html">Bastien</a></li>
+                        <li><a href="../blogRomainJ.html">Romain J</a></li>
+                        <li><a href="../clement/blogClementC.html">Clément</a></li>
+                        <li><a href="../blogTitouanR.html">Titouan</a></li>
+                        <li><a href="../blogDamienL.html">Damien</a></li>
+                        <li><a href="../blogBastien.html">Bastien</a></li>
                       </ul>
                     </div>
                   </div>
@@ -221,16 +221,16 @@ https://templatemo.com/tm-551-stand-blog
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
     <!-- Additional Scripts -->
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/slick.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/accordions.js"></script>
+    <script src="../assets/js/custom.js"></script>
+    <script src="../assets/js/owl.js"></script>
+    <script src="../assets/js/slick.js"></script>
+    <script src="../assets/js/isotope.js"></script>
+    <script src="../assets/js/accordions.js"></script>
 
 
     <script language = "text/Javascript"> 
