--- a/Family_trip.html
+++ b/Family_trip.html
@@ -210,7 +210,7 @@ https://templatemo.com/tm-551-stand-blog
                                     <h5>THE FILM INDUSTRY IN LODZ</h5>
                                     <span>27 Mars</span>
                                 </a></li>
-                                <li><a href="article2eloi.html">
+                                <li><a href="Eloi/article2eloi.html">
                                     <h5>MUSCULATION'S DIETETICS</h5>
                                     <span> Mar. 27</span>
                                 </a></li>
@@ -231,7 +231,7 @@ https://templatemo.com/tm-551-stand-blog
                     <div class="content">
                       <ul>
                         <li><a href="blogRomainM.html">Romain M </a></li>
-                        <li><a href="blogEloiA.html">Eloi</a></li>
+                        <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
                         <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
