--- a/RomainBudapest.html
+++ b/RomainBudapest.html
@@ -167,7 +167,7 @@ https://templatemo.com/tm-551-stand-blog
                       </div>
                       <div class="content">
                           <ul>
-                              <li><a href="Wroclaw_dwarf.html">
+                              <li><a href="Eloi/Wroclaw_dwarf.html">
                                   <h5>Trip in Wrocław</h5>
                                   <span>May. 8</span>
                               </a></li>
@@ -192,7 +192,7 @@ https://templatemo.com/tm-551-stand-blog
                   <div class="content">
                     <ul>
                       <li><a href="blogRomainM.html">Romain M </a></li>
-                      <li><a href="blogEloiA.html">Eloi</a></li>
+                      <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                       <li><a href="blogRomainJ.html">Romain J</a></li>
                       <li><a href="clement/blogClementC.html">Clément</a></li>
                       <li><a href="blogTitouanR.html">Titouan</a></li>
