--- a/elcubano.html
+++ b/elcubano.html
@@ -170,7 +170,7 @@ https://templatemo.com/tm-551-stand-blog
                         </div>
                         <div class="content">
                             <ul>
-                                <li><a href="article2eloi.html">
+                                <li><a href="Eloi/article2eloi.html">
                                     <h5>Musculation's Dietetics</h5>
                                     <span>Mar. 26</span>
                                 </a></li>
@@ -195,7 +195,7 @@ https://templatemo.com/tm-551-stand-blog
                     <div class="content">
                       <ul>
                         <li><a href="blogRomainM.html">Romain M </a></li>
-                        <li><a href="blogEloiA.html">Eloi</a></li>
+                        <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
                         <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
