--- a/CinemaInLodz.html
+++ b/CinemaInLodz.html
@@ -175,7 +175,7 @@ From my point of view, I find the history of cinema in Lodz a fascinating subjec
                     <div class="content">
                       <ul>
                         <li><a href="blogRomainM.html">Romain M </a></li>
-                        <li><a href="blogEloiA.html">Eloi</a></li>
+                        <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
                         <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
