--- a/Eloi/arrivallodz.html
+++ b/Eloi/arrivallodz.html
@@ -12,13 +12,13 @@
     <title>Lodz Erasmus</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-stand-blog.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/templatemo-stand-blog.css">
+    <link rel="stylesheet" href="../assets/css/owl.css">
 <!-- TemplateMo 551 Stand Blog https://templatemo.com/tm-551-stand-blog  -->
   </head>
 
@@ -38,26 +38,26 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
           <div class="container">
-            <a class="navbar-brand" href="index.html"><h2>Lodz Erasmus<em>.</em></h2></a>
+            <a class="navbar-brand" href="../index.html"><h2>Lodz Erasmus<em>.</em></h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home
+                  <a class="nav-link" href="../index.html">Home
                     <span class="sr-only">(current)</span>
                   </a>
                 </li>  
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">ABOUT</a>
+                  <a class="nav-link" href="../about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="blog.html">BLOG</a>
+                  <a class="nav-link" href="../blog.html">BLOG</a>
                 </li>
                 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">CONTACT US</a>
+                  <a class="nav-link" href="../contact.html">CONTACT US</a>
                 </li>
               </ul>
             </div>
@@ -92,7 +92,7 @@
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="Images/stickers-avion-qui-decolle-au-lever-du-soleil.jpg.jpg" alt="">
+                      <img src="../Images/stickers-avion-qui-decolle-au-lever-du-soleil.jpg.jpg" alt="">
                     </div>
                     <div class="down-content">
                       <span>Arrival</span>
@@ -151,11 +151,11 @@
                                     <h5>Arrival in Lodz</h5>
                                     <span>Jan. 26</span>
                                 </a></li>
-                                <li><a href="Street-Art-Lodz.html">
+                                <li><a href="../Street-Art-Lodz.html">
                                     <h5>Street Art in Lodz</h5>
                                     <span>Jan. 20</span>
                                 </a></li>
-                                <li><a href="Presentation-Erasmus.html">
+                                <li><a href="../Presentation-Erasmus.html">
                                     <h5>Erasmus Presentation</h5>
                                     <span>Jan. 17</span>
                                 </a></li>
@@ -171,13 +171,13 @@
                     </div>
                     <div class="content">
                       <ul>
-                        <li><a href="blogRomainM.html">Romain M </a></li>
+                        <li><a href="../blogRomainM.html">Romain M </a></li>
                         <li><a href="blogEloiA.html">Eloi</a></li>
-                        <li><a href="blogRomainJ.html">Romain J</a></li>
-                        <li><a href="clement/blogClementC.html">Clément</a></li>
-                        <li><a href="blogTitouanR.html">Titouan</a></li>
-                        <li><a href="blogDamienL.html">Damien</a></li>
-                        <li><a href="blogBastien.html">Bastien</a></li>
+                        <li><a href="../blogRomainJ.html">Romain J</a></li>
+                        <li><a href="../clement/blogClementC.html">Clément</a></li>
+                        <li><a href="../blogTitouanR.html">Titouan</a></li>
+                        <li><a href="../blogDamienL.html">Damien</a></li>
+                        <li><a href="../blogBastien.html">Bastien</a></li>
                       </ul>
                     </div>
                   </div>
@@ -207,16 +207,16 @@
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
     <!-- Additional Scripts -->
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/slick.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/accordions.js"></script>
+    <script src="../assets/js/custom.js"></script>
+    <script src="../assets/js/owl.js"></script>
+    <script src="../assets/js/slick.js"></script>
+    <script src="../assets/js/isotope.js"></script>
+    <script src="../assets/js/accordions.js"></script>
 
 
     <script language = "text/Javascript"> 
