--- a/Musculation.html
+++ b/Musculation.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="Images/EloiFlex.jpg" style="width: 100%;" alt="">
+                      <img src="Eloi/Images/EloiFlex.jpg" style="width: 100%;" alt="">
                     </div>
                     <div class="down-content">
                       <span>Lifestyle</span>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-551-stand-blog
                     <div class="content">
                       <ul>
                         <li><a href="blogRomainM.html">Romain M </a></li>
-                        <li><a href="blogEloiA.html">Eloi</a></li>
+                        <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
                         <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
