--- a/RomainMuséeLodz.html
+++ b/RomainMuséeLodz.html
@@ -147,7 +147,7 @@ To conclude, we are taken on a real journey through time in the city of Lodz. Wi
                       </div>
                       <div class="content">
                           <ul>
-                              <li><a href="Wroclaw_dwarf.html">
+                              <li><a href="Eloi/Wroclaw_dwarf.html">
                                   <h5>Trip in Wrocław</h5>
                                   <span>May. 8</span>
                               </a></li>
@@ -172,7 +172,7 @@ To conclude, we are taken on a real journey through time in the city of Lodz. Wi
                   <div class="content">
                     <ul>
                       <li><a href="blogRomainM.html">Romain M </a></li>
-                      <li><a href="blogEloiA.html">Eloi</a></li>
+                      <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                       <li><a href="blogRomainJ.html">Romain J</a></li>
                       <li><a href="clement/blogClementC.html">Clément</a></li>
                       <li><a href="blogTitouanR.html">Titouan</a></li>
