--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
           </p>
       </div>
         <div class="col-lg-4">
-          <img src="Images/PP_Eloi.jpeg" style="border-radius: 100%; width : 50%; ">
+          <img src="Eloi/Images/PP_Eloi.jpeg" style="border-radius: 100%; width : 50%; ">
         <h4>Eloi Anquetil - The Muscle Mommy </h4>
         <p>I've got more muscle than brain.</p>
       </div>
