--- a/blogTitouanR.html
+++ b/blogTitouanR.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="content">
                     <ul>
-                        <li><a href="arrivallodz.html">
+                        <li><a href="Eloi/arrivallodz.html">
                             <h5>Arrival in Lodz</h5>
                             <span>Feb. 11</span>
                         </a></li>
@@ -248,7 +248,7 @@
                   <div class="content">
                     <ul>
                       <li><a href="blogRomainM.html">Romain M</a></li>
-                      <li><a href="blogEloiA.html">Eloi</a></li>
+                      <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                       <li><a href="blogRomainJ.html">Romain J</a></li>
                       <li><a href="clement/blogClementC.html">Clément</a></li>
                       <li><a href="blogTitouanR.html">Titouan</a></li>
