--- a/clement/ThirdArticleClement.html
+++ b/clement/ThirdArticleClement.html
@@ -140,7 +140,7 @@
                         </div>
                         <div class="content">
                             <ul>
-                                <li><a href="../arrivallodz.html">
+                                <li><a href="../Eloi/arrivallodz.html">
                                     <h5>Arrival in Lodz</h5>
                                     <span>Jan. 26</span>
                                 </a></li>
@@ -165,7 +165,7 @@
                     <div class="content">
                       <ul>
                         <li><a href="../blogRomainM.html">Romain M </a></li>
-                        <li><a href="../blogEloiA.html">Eloi</a></li>
+                        <li><a href="../Eloi/blogEloiA.html">Eloi</a></li>
                         <li><a href="../blogRomainJ.html">Romain J</a></li>
                         <li><a href="blogClementC.html">Clément</a></li>
                         <li><a href="../blogTitouanR.html">Titouan</a></li>
