--- a/cottonclub.html
+++ b/cottonclub.html
@@ -175,7 +175,7 @@ https://templatemo.com/tm-551-stand-blog
                                     <h5>A WEEKEND IN KRAKOW</h5>
                                     <span>MAY 7</span>
                                 </a></li>
-                                <li><a href="Wroclaw_dwarf.html">
+                                <li><a href="Eloi/Wroclaw_dwarf.html">
                                     <h5>TRIP IN WROCLAW</h5>
                                     <span>MAY 7</span>
                                 </a></li>
@@ -196,7 +196,7 @@ https://templatemo.com/tm-551-stand-blog
                     <div class="content">
                       <ul>
                         <li><a href="blogRomainM.html">Romain M </a></li>
-                        <li><a href="blogEloiA.html">Eloi</a></li>
+                        <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
                         <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
