--- a/theTextileIndustry.html
+++ b/theTextileIndustry.html
@@ -168,7 +168,7 @@ https://templatemo.com/tm-551-stand-blog
                     <div class="content">
                       <ul>
                         <li>
-                          <a href="article2eloi.html">
+                          <a href="Eloi/article2eloi.html">
                             <h5>MUSCULATION'S DIETETICS</h5>
                             <span>Mar. 27</span>
                           </a>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-551-stand-blog
                     <div class="content">
                       <ul>
                         <li><a href="blogRomainM.html">Romain M </a></li>
-                        <li><a href="blogEloiA.html">Eloi</a></li>
+                        <li><a href="Eloi/blogEloiA.html">Eloi</a></li>
                         <li><a href="blogRomainJ.html">Romain J</a></li>
                         <li><a href="clement/blogClementC.html">Clément</a></li>
                         <li><a href="blogTitouanR.html">Titouan</a></li>
