--- a/blogDamienL.html
+++ b/blogDamienL.html
@@ -134,7 +134,7 @@
               <div class="col-lg-6">
                 <div class="blog-post">
                   <div class="blog-thumb">
-                    <img src="Images/RestEntrance.png" style="height: 320epx;" alt="">
+                    <img src="Images/RestEntrance.png" style="height: 320epx;" alt="Pierogarnia Stary Młyn">
                   </div>
                   <div class="down-content">
                     <span>Restaurant</span>
