--- a/Eloi/blogEloiA.html
+++ b/Eloi/blogEloiA.html
@@ -222,7 +222,7 @@
               <div class="col-lg-6">
                 <div class="blog-post">
                   <div class="blog-thumb">
-                    <img src="../Images/stickers-avion-qui-decolle-au-lever-du-soleil.jpg.jpg" style="height: 320epx;" alt="">
+                    <img src="Images/stickers-avion-qui-decolle-au-lever-du-soleil.jpg.jpg" style="height: 320epx;" alt="">
                   </div>
                   <div class="down-content">
                     <span>Arrival</span>
