--- a/Eloi/arrivallodz.html
+++ b/Eloi/arrivallodz.html
@@ -92,7 +92,7 @@
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="../Images/stickers-avion-qui-decolle-au-lever-du-soleil.jpg.jpg" alt="">
+                      <img src="Images/stickers-avion-qui-decolle-au-lever-du-soleil.jpg.jpg" alt="">
                     </div>
                     <div class="down-content">
                       <span>Arrival</span>
