--- a/Flanki.html
+++ b/Flanki.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="https://poznan.esn.pl/events/flanki-tournament" alt="">
+                      <img src="https://poznan.esn.pl/sites/default/files/styles/zoom/public/events/images/cheers-839865_1920.jpg?itok=2DPEyIIl" alt="">
                     </div>
                     <div class="down-content">
                       <span>City</span>
