--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,7 @@
             <div class="col-lg-6">
               <div class="blog-post">
                 <div class="blog-thumb">
-                  <img src="https://poznan.esn.pl/events/flanki-tournament" style="height: 320epx;" alt="">
+                  <img src="https://poznan.esn.pl/sites/default/files/styles/zoom/public/events/images/cheers-839865_1920.jpg?itok=2DPEyIIl" style="height: 320epx;" alt="">
                 </div>
                 <div class="down-content">
                   <span>City</span>
