--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="item">
           <a href="Flanki.html">
-          <img src="https://poznan.esn.pl/events/flanki-tournament" style="height: 440px;" alt="">
+          <img src="https://poznan.esn.pl/sites/default/files/styles/zoom/public/events/images/cheers-839865_1920.jpg?itok=2DPEyIIl" style="height: 440px;" alt="">
           <div class="item-content">
             <div class="main-content">
               <div class="meta-category">
