--- a/sopot_trip.html
+++ b/sopot_trip.html
@@ -176,8 +176,8 @@ https://templatemo.com/tm-551-stand-blog
                         <p style="padding :0px ;margin :0px;color: black;font-size: 14px; text-align: center; border-top: 0px solid #eee; border-bottom: 0px solid #eee;">Sopot Beach</p>  
                         <p style="border-top: 0px solid #eee;border-bottom: 0px solid #eee; padding :0px ;">
                             <br><br>
-                            Sopot, with its picturesque coastline, captivating landmarks, and vibrant atmosphere, offers a perfect blend of relaxation and cultural experiences. From the iconic Sopot Pier to the lively streets filled with cafes and shops, we really enjoyed every corner of this seaside gem that we could visit. Whether you're a nature enthusiast, history buff, or simply seeking a tranquil beach getaway, Sopot promises an unforgettable experience that will leave you longing to return again and again.
-
+                            Sopot, with its picturesque coastline, captivating landmarks, and vibrant atmosphere, offers a perfect blend of relaxation and cultural experiences. From the iconic Sopot Pier to the lively streets filled with cafes and shops, we really enjoyed every corner of this seaside gem that we could visit. Whether you're a nature enthusiast, history buff, or simply seeking a tranquil beach getaway, Sopot promises an unforgettable experience that will leave you longing to return again and again. But the history doesn't stop here 
+                            for us. during our Weekend, we also visited another City which is Gdynia, but this will be the topic of another article.                      
                         <br>
                         <br>
                         <p style=" border-bottom: 0px solid #eee;padding-bottom :0px ;margin :0px ;">Sources:</p>
