second article blog Damien

--- a/sopot_trip.html
+++ b/sopot_trip.html
@@ -167,7 +167,7 @@ https://templatemo.com/tm-551-stand-blog
                         <p style="border-top: 0px solid #eee;border-bottom: 0px solid #eee; padding :0px ;">
                             <br>
                             <br>
-                            <span style="color: black;font-size: 14px;">Sopot Pier (Molo): </span>
+                            <span style="color: black;font-size: 14px;">Sopot Beach </span>
                             <br>Sopot's pristine sandy beach beckons visitors with its golden shores and refreshing sea breeze. Spend a relaxing day sunbathing, take a dip in the crystal-clear waters, or engage in water sports activities such as paddleboarding or windsurfing. With numerous beach bars and restaurants nearby, you can easily indulge in delicious meals while enjoying the beachfront atmosphere.
                             <img src="Images/SopotGaleria/beachviewthree.jpg" style="width: 70%; margin-left:100px" alt="Sopot Beach"></p>
                         <p style="padding :0px ;margin :0px;color: black;font-size: 14px; text-align: center; border-top: 0px solid #eee; border-bottom: 0px solid #eee;">Sopot Beach</p>  
